Fixing cart items removing icon on mobile

--- a/sass/modules/woocommerce/_woocommerce.scss
+++ b/sass/modules/woocommerce/_woocommerce.scss
@@ -341,10 +341,9 @@
 		float: right;
 		position: relative;
 		color: #999 !important;
-		margin-top: 10px;
 		font-size: 30px;
 		font-weight: 500;
-		line-height: 0;
+		line-height: 25px;
 		padding: 0;
 		&:hover {
 			background: transparent;
